# notebooks

./: .gitignore  AOTY.ipynb  ArchiveTeam-sizes.csv  ArchiveTeam.ipynb  ArchiveTeam.py  Black Lives Matter Counts.ipynb  Browsertrix Progress.ipynb  CensusFTP.ipynb  Crystal Johnson Tweets.ipynb  DemDebate.ipynb  Ferguson Activists.ipynb  George Floyd.ipynb  IRA Facebook Posts.ipynb  Iron March Wikipedia Edits.ipynb  LAPD.ipynb  Languages.ipynb  LastFM Dissertation Highlights.ipynb  MarylandStateParks.ipynb  Novaya Gazeta.ipynb  OpenAlex.ipynb  PURL.ipynb  Pipfile  Python Revision History.ipynb  README.md  Reddit-Biden.ipynb  SUCHO.ipynb  Stanford Free Speech.ipynb  Stanford-DOE.ipynb  Tornado.ipynb  Trump Tweets at Internet Archive.ipynb  Tweet Deletes.ipynb  Tweets to 45.ipynb  Twitter_Organizations.ipynb  Ukraine.ipynb  Unlocking the Airwaves.ipynb  Unlocking_the_Airwaves.ipynb  Vaccinations-Race-MD.ipynb  Weather_Text.ipynb  Wordle.ipynb  Zola.ipynb  (+2 more)
data/: ArchiveTeam-collections.csv  ArchiveTeam-dates.csv  biden-coronavirus.csv  biden-dead.csv  blacklivesmatter-blm-counts.csv  blacklivesmatter-counts.csv  census-decennial.csv  census-sample.csv  census-summary-file.csv  census-tiger2022.csv  census-tiger2023.csv  census-tiger2024.csv  crystal1johnson-profile.csv  crystal1johnson.csv  demdebate-dropped.csv  demdebate.csv  georgefloyd.csv  irads.csv  ironmarch-en.csv  maga-counts.csv  md-population-race.csv  md-vaccinations-race.csv  md-vaccinations-race.html  md-vaccinations.sqlite3  novaya-gazeta.csv  open-alex-domains.csv  purl-namespace-sample.csv  python.csv  (+9 more)
(+1 files in other folders)
