[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.26",
    "internetarchive>=5.3.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.6",
    "kaleido>=0.2.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psutil>=7.0.0",
    "pyalex>=0.18",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "snscrape>=0.7.0.20230622",
    "tqdm>=4.67.1",
    "twarc>=2.14.0",
    "wayback>=0.4.5",
]

[tool.uv]
constraint-dependencies = ["kaleido==0.2.1"]
